# analytics-services

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
analytics_services/: asgi.py  settings.py  urls.py  wsgi.py
api/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
data/: vgsales.csv
records/: apps.py  models.py
tests/: test_django_services.py
users/: permissions.py  serializers.py  urls.py  views.py
